# HarnessBench

./: .gitignore  CITATION.cff  NOTICE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: adding-a-harness.md  cloud-harness-setup.md  harness-comparison.md
fixtures/: smoke.json
src/harnessbench/: __init__.py  __main__.py  cli.py  leaderboard.py  matrix.py
src/harnessbench/harnesses/: __init__.py  _schema.py
src/harnessbench/harnesses/browser_use/: Dockerfile  __init__.py  run.sh  setup.sh  spec.py
src/harnessbench/harnesses/claw_code/: Dockerfile  __init__.py  run.sh  setup.sh  spec.py
src/harnessbench/harnesses/coze_studio/: Dockerfile  __init__.py  run.sh  setup.sh  spec.py
src/harnessbench/harnesses/hermes/: Dockerfile  __init__.py  run.sh  setup.sh  spec.py
src/harnessbench/harnesses/openclaw/: Dockerfile  __init__.py  run.sh  setup.sh  spec.py
src/harnessbench/harnesses/stagehand/: Dockerfile  __init__.py  run.sh  setup.sh  spec.py
tests/: test_cloud_skip.py  test_matrix.py  test_plugin_discovery.py
